# kaboom_server

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 066c1b8de564_make_first_and_last_names_nullable.py  109ba6c89516_remove_token_version_from_user.py  18ecda4e7ce4_make_expiry_tz_aware_in_refreshtoken.py  2d7919839dc3_pending_message_model.py  6fefb26d6e0a_add_display_id_for_visitor.py  7d69930b3204_link_widget_conversation_and_pending_.py  86b82872fdf3_initial_schema.py  86cf7944d70a_new_models.py  978320c5b569_actor_model.py  a3c968d30e29_clean_models.py  bcf8c6e624cc_allow_close_pending_conversation.py  bff1b1de8110_add_widget_and_project_models.py  c479aa7b3982_no_slug_for_widget.py
app/: main.py
app/core/: config.py  constants.py  database.py  schema.py  security.py  tokens.py  utils.py  websocket_manager.py
app/db/: actor.py  conversation.py  message.py  models.py  pending_conversation.py  pending_message.py  project.py  refresh_token.py  user.py  visitor.py  widget.py
app/features/auth/: auth_controller.py  auth_router.py  auth_schema.py  auth_service.py  dependencies.py  exceptions.py  google_oauth.py  router.py  schema.py  service.py
app/features/conversation/: conversation_router.py  conversation_schema.py  conversation_service.py  (+6 more)
prisma/: schema.prisma
src/: app.module.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  constants.ts
src/entities/: user-token.entity.ts  user.entity.ts
src/user/: user.controller.ts  user.service.ts
(+64 files in other folders)
